2008-04-09  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Remove useless application/x-dbm
	mime-type, it didn't have a comment, or an users (Closes: #15223)

2008-04-09  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Make application/x-flash-video an alias,
	and have the top-level mime-type be video/x-flv, so apps can use
	video/ to filter it (Closes: #14982)

2008-03-28  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Add application/x-redhat-package-manager
	as an alias for RPM

2008-03-26  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in:
	* tests/list:
	* tests/test.ext,v: Add *,v files from RCS to the
	text/plain files, add a test

2008-03-04  Alexander Larsson  <alexl@redhat.com>

	* shared-mime-info-spec.xml:
	Update spec from discussion on list:
	Add generic-icon and icon support.
	Add glob weight
	Change recommended sniffing/glob order

2008-03-04  Bastien Nocera  <hadess@hadess.net>

	* update-mime-database.c (process_freedesktop_node):
	Just ignore fields we don't know about, instead of
	erroring out, patch by David Faure <dfaure@trolltech.com>

2008-02-29  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Add mime-type for SMAF,
	XMF and iMelody ringtones, and MRML "playlist" type

	* tests/list:
	* tests/playlist.mrl:
	* tests/ringtone.ime:
	* tests/ringtone.mmf: Add tests for the above minus XMF

2008-02-28  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Remove *.amr from 3gpp files,
	they're already used by audio/AMR,
	Add audio/mp3 as an alias for audio/mpeg
	Add audio/vnd.m-realaudio as an alias for audio/vnd.rn-realaudio
	Add audio/wma as an alias for video/x-ms-asf

2008-02-21  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in:
	* tests/registry.reg: Detect registry files when they're
	UTF-16 encoded as exported by regedit on Windows XP,
	magic provided by Robert Millan <rmh@aybabtu.com>

2008-02-21  Bastien Nocera  <hadess@hadess.net>
