@@ -1141,6 +1141,17 @@ command to generate the output files.
     </magic>
     <glob pattern="*.exe"/>
   </mime-type>
+  <mime-type type="application/x-fluid">
+    <sub-class-of type="text/plain"/>
+    <_comment>FLTK Fluid file</_comment>
+    <magic priority="50">
+      <match type="string" value="# data file for the Fltk" offset="0"/>
+      <match type="string" value="version" offset="0"/>
+      <match type="string" value="header_name" offset="0"/>
+      <match type="string" value="code_name" offset="0"/>
+    </magic>
+    <glob pattern="*.fl"/>
+  </mime-type>
   <mime-type type="application/x-font-type1">
     <sub-class-of type="application/postscript"/>
     <_comment>Postscript type-1 font</_comment>
